# fortiesr

./: .gitignore  .pre-commit-config.yaml  =2.3.0  AGENTS.md  AutoQuant_System_Documentation.md  CODE_STANDARDS.md  README.md  analyze_discovery.py  data_aware_strategy_discovery.py  data_aware_strategy_discovery_results.json  ga_with_real_backtest.py  hermes_smoke_test_report.md  hyperopt_profitable_discovery.py  hyperopt_profitable_discovery_results.json  index.html  kill_port.py  launch.py  launch_aero.py  opencode.json  package-lock.json  package.json  profitable_strategy_discovery.py  profitable_strategy_discovery_direct.py  profitable_strategy_discovery_results.json  pyproject.toml  rapid_strategy_discovery.py  rapid_strategy_discovery_results.json  requirements-ai.txt  requirements-core.txt  requirements-dev.txt  requirements-rl.txt  requirements-trading.txt  requirements.txt  run_profitable_strategy.py  server.py  tasks10c.md  tasks11.md  tasks11e1.md  tasks11e2.md  tasks14.md  (+11 more)
.ai/: APPLICATION_REFERENCE_GUIDE.md  EVOLUTION_ROADMAP.md
.devin/: config.local.json
.obsidian/: workspace.json
40/: README.md  package.json
aero/: app.py  backend_api.py  doctor.py  fixer.py  models.py
attached_assets/: Pasted-0-6-trials-complete-Elapsed-0s-0-0-Net-Profit-per-Trial_1781436882237.txt  Pasted-Goal-Every-Freqtrade-strategy-must-have-a-matching-side_1781435258898.txt  Pasted-Role-Full-Stack-Web-Developer-FastAPI-Expert-Task-Conne_1780128649165.txt  Pasted-Role-Full-Stack-Web-Developer-UI-UX-Expert-Task-Build-a_1780126690570.txt  (+5 more)
autoquant-frontend/: README.md  (+6 more)
(+11409 files in other folders)
