[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "AutoQuant Trading Strategy Analysis Platform"
requires-python = ">=3.11, <3.14"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "uvicorn>=0.48.0",
    "pydantic>=2.0",
    "freqtrade>=2024.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "backend/__init__.py"
